Refactor Linker class for improved clarity and organization; enhance documentation and streamline methods