@@ -4,7 +4,6 @@ import sicxesimulator.software.data.ObjectFile;
 import sicxesimulator.software.data.Symbol;
 import sicxesimulator.software.data.SymbolTable;
 import sicxesimulator.software.data.RelocationRecord;
-import sicxesimulator.software.loader.Loader;
 import sicxesimulator.common.utils.Constants;
 import sicxesimulator.common.utils.FileUtils;
 
@@ -12,486 +11,300 @@ import java.io.File;
 import java.io.IOException;
 import java.util.*;
 
-import static sicxesimulator.software.data.ObjectFile.ObjectFileOrigin.LINKED_MODULES;
-
 /**
- * Responsável por combinar múltiplos módulos objeto em um único {@link ObjectFile} final.
+ * Combina vários módulos objeto SIC/XE em um único {@link ObjectFile}.
  *
- * <p>Suporta dois modos de operação:</p>
+ * <p>Modos de operação:</p>
  * <ul>
- *   <li><b>finalRelocation=true:</b> Aplica realocação final diretamente no array de bytes.
- *       Gera um objeto totalmente resolvido, pronto para execução.</li>
- *   <li><b>finalRelocation=false:</b> Gera um objeto com realocações pendentes,
- *       que serão aplicadas posteriormente pelo {@link Loader}.</li>
+ *   <li><b>finalRelocation = true</b> – aplica relocação definitiva nos bytes,
+ *       gerando um objeto pronto para execução;</li>
+ *   <li><b>false</b> – mantém {@link RelocationRecord}s pendentes
+ *       para que o {@code Loader} resolva em tempo de carga.</li>
  * </ul>
- *
- * <p>Durante o processo de linkedição, os seguintes passos são realizados:</p>
- * <ol>
- *   <li>Atribuição de endereços base a cada módulo</li>
- *   <li>Validação de símbolos importados</li>
- *   <li>Geração do array de byte final (com ou sem relocação final)</li>
- *   <li>Construção da tabela global de símbolos</li>
- *   <li>Geração de registros H/D/T/M/E no formato textual</li>
- *   <li>Escrita dos arquivos .obj e .meta no disco</li>
- * </ol>
  */
 public class Linker {
 
     /**
-     * Executa o processo de linkedição de uma lista de módulos em um único objeto final.
+     * Executa o processo completo de linkedição.
      *
-     * @param modules Lista de módulos {@link ObjectFile} a serem linkados.
-     * @param finalRelocation Indica se a realocação final deve ser aplicada diretamente.
-     * @param loadAddress Endereço base para carga, usado apenas se finalRelocation=true.
-     * @param outputFileName Nome base do arquivo .obj resultante (sem extensão).
-     * @return Objeto final {@link ObjectFile} resultante do processo.
+     * @param modules         lista de objetos a linkar
+     * @param finalRelocation indica se a relocação deve ser definitiva
+     * @param loadAddress     endereço base (usado apenas se {@code finalRelocation=true})
+     * @param outputFileName  nome-base dos arquivos gerados (sem extensão)
+     * @return {@link ObjectFile} resultante
      */
     public ObjectFile linkModules(List<ObjectFile> modules, boolean finalRelocation, int loadAddress, String outputFileName) {
-        if (modules.isEmpty()) {
-            throw new IllegalArgumentException("Nenhum modulo para linkar.");
-        }
+        Objects.requireNonNull(modules, "modules não pode ser nulo");
+        if (modules.isEmpty()) throw new IllegalArgumentException("Nenhum módulo para linkar.");
 
-        // Passo 1: Atribuir base para cada módulo e montar tabela global de símbolos
-        LinkerContext context = assignBasesAndGlobalSymbols(modules, finalRelocation);
+        /* 1. Bases e símbolos globais */
+        LinkerContext ctx = assignBasesAndGlobalSymbols(modules, finalRelocation);
 
-        // Passo 2: Validar símbolos importados (ver se todos existem em "globalSymbols")
-        verifyImportedSymbols(modules, context.globalSymbols);
+        /* 2. Valida imports */
+        verifyImportedSymbols(modules, ctx.globalSymbols);
 
-        // Passo 3: Concatena os bytes de cada módulo. Se finalRelocation=true,
-        // já aplica a realocação nos bytes; senão, apenas gera relocationRecords novos.
-        FinalCodeData finalData = buildFinalCodeAndSymbols(modules, context, finalRelocation);
+        /* 3. Monta código final e relocations */
+        FinalCodeData data = buildFinalCodeAndSymbols(modules, ctx, finalRelocation);
 
-        // Passo 4: Determina endereço inicial no objeto final
-        // Se já realocou tudo, começa no loadAddress. Caso contrário,
-        // poderíamos reaproveitar o do primeiro módulo. Aqui fica a critério do design.
-        int finalStart = finalRelocation
-                ? loadAddress
-                : modules.getFirst().getStartAddress();
+        /* 4. Endereço inicial */
+        int startAddress = finalRelocation ? loadAddress : modules.get(0).getStartAddress();
 
-        // Combina os fontes de todos módulos (opcional, serve para fins de debug)
-        List<String> combinedSource = combineModuleSources(modules);
+        /* 5. Fonte combinado (debug) */
+        List<String> sources = combineModuleSources(modules);
 
-        // Passo 5: Cria o ObjectFile resultante
-        // - Se finalRelocation=true => sem relocationRecords;
-        //   do contrário, com a lista gerada (finalData.relocationRecords).
-        ObjectFile finalObj = new ObjectFile(
-                finalStart,
-                finalData.code,
-                finalData.symbolTable,
+        /* 6. Cria ObjectFile */
+        ObjectFile result = new ObjectFile(
+                startAddress,
+                data.code,
+                data.symbolTable,
                 outputFileName,
-                combinedSource,
-                Collections.emptySet(), // ImportedSymbols não são mais relevantes no objeto final
-                finalRelocation ? Collections.emptyList() : finalData.relocationRecords
+                sources,
+                Collections.emptySet(),
+                finalRelocation ? Collections.emptyList() : data.relocationRecords
         );
-        finalObj.setOrigin(LINKED_MODULES);
-        finalObj.setFullyRelocated(finalRelocation);
+        result.setOrigin(ObjectFile.ObjectFileOrigin.LINKED_MODULES);
+        result.setFullyRelocated(finalRelocation);
 
-        // Passo 6: sgerar saída textual H-D-T-M-E e gravar no disco
-        String objFileName = outputFileName + ".obj";
+        /* 7. Persistência (.obj textual e .meta) */
         try {
-            writeLinkedObjectFile(finalObj, objFileName, finalRelocation);
+            writeLinkedObjectFile(result, outputFileName, !finalRelocation);
         } catch (IOException e) {
-            System.err.println("Falha ao gravar .obj final textual: " + e.getMessage());
+            System.err.println("Falha ao gravar .obj textual: " + e.getMessage());
         }
-        File metaFile = new File(Constants.SAVE_DIR, outputFileName + ".meta");
-        finalObj.saveToFile(metaFile);
-
-        return finalObj;
+        result.saveToFile(new File(Constants.SAVE_DIR, outputFileName + ".meta"));
+        return result;
     }
 
-    /**
-     * Atribui endereços base para os módulos e constrói a tabela global de símbolos exportados.
-     *
-     * <p>O comportamento varia conforme o modo de realocação:</p>
-     * <ul>
-     *   <li><b>finalRelocation=true:</b> Cada módulo usa seu próprio START. Os símbolos exportados
-     *   são ajustados com base nesse START.</li>
-     *   <li><b>finalRelocation=false:</b> Módulos são empilhados sequencialmente, e o endereço de cada símbolo
-     *   exportado é ajustado com o offset global.</li>
-     * </ul>
-     *
-     * @return {@link LinkerContext} contendo as informações globais necessárias para a montagem do objeto final.
-     */
+    /* ------------------------------------------------------------------------------------------ */
+    /*  PASSO 1 – Bases e símbolos globais                                                       */
+    /* ------------------------------------------------------------------------------------------ */
+
     private LinkerContext assignBasesAndGlobalSymbols(List<ObjectFile> modules, boolean finalRelocation) {
         Map<ObjectFile, Integer> baseMap = new HashMap<>();
-        Map<String, Integer> globalSymbols = new HashMap<>();
-        Set<String> exportedSymbols = new HashSet<>();
+        Map<String, Integer> global = new HashMap<>();
+        Set<String> duplicates = new HashSet<>();
 
         int totalSize;
-        if (finalRelocation) {
-            // Modo ABSOLUTO: cada módulo usa seu próprio START (interpretado como decimal ou hexadecimal conforme Parser)
-            // TotalSize = (maior (start + tamanho)) - (menor start)
-            int minStart = Integer.MAX_VALUE;
-            int maxEnd = 0;
-            for (ObjectFile mod : modules) {
-                int start = mod.getStartAddress();
-                int end = start + mod.getProgramLength();
-                if (start < minStart) {
-                    minStart = start;
-                }
-                if (end > maxEnd) {
-                    maxEnd = end;
-                }
-                // A base de cada módulo é o próprio seu START
-                baseMap.put(mod, start);
+        if (finalRelocation) {                    // modo absoluto
+            int minStart = Integer.MAX_VALUE, maxEnd = 0;
+            for (ObjectFile m : modules) {
+                int start = m.getStartAddress();
+                int end   = start + m.getProgramLength();
+                minStart = Math.min(minStart, start);
+                maxEnd   = Math.max(maxEnd,   end);
+                baseMap.put(m, start);
 
-                // Copia símbolos exportados
-                for (var e : mod.getSymbolTable().getAllSymbols().entrySet()) {
-                    String symName = e.getKey();
-                    Symbol sym = e.getValue();
-                    if (sym.isPublic) {
-                        int globalAddr = start + sym.address;
-                        if (!exportedSymbols.add(symName)) {
-                            throw new IllegalStateException("Símbolo " + symName + " exportado por mais de um módulo.");
-                        }
-                        globalSymbols.put(symName, globalAddr);
+                for (Symbol s : m.getSymbolTable().getAllSymbols().values()) {
+                    if (s.isPublic) {
+                        if (!duplicates.add(s.name))
+                            throw new IllegalStateException("Símbolo duplicado: " + s.name);
+                        global.put(s.name, start + s.address);
                     }
                 }
             }
             totalSize = maxEnd - minStart;
-        } else {
-            // Modo RELOCÁVEL: os módulos são empilhados
-            int maxAddressUsed = 0;
-            for (ObjectFile mod : modules) {
-                int base = maxAddressUsed; // coloca o módulo na sequência
-                baseMap.put(mod, base);
-
-                // Copia símbolos exportados (ajustando com o offset global)
-                for (var e : mod.getSymbolTable().getAllSymbols().entrySet()) {
-                    String symName = e.getKey();
-                    Symbol sym = e.getValue();
-                    if (sym.isPublic) {
-                        int globalAddr = maxAddressUsed + sym.address;
-                        if (!exportedSymbols.add(symName)) {
-                            throw new IllegalStateException("Símbolo duplicado: " + symName);
-                        }
-                        globalSymbols.put(symName, globalAddr);
+        } else {                                 // modo relocável em sequência
+            int offset = 0;
+            for (ObjectFile m : modules) {
+                baseMap.put(m, offset);
+                for (Symbol s : m.getSymbolTable().getAllSymbols().values()) {
+                    if (s.isPublic) {
+                        if (!duplicates.add(s.name))
+                            throw new IllegalStateException("Símbolo duplicado: " + s.name);
+                        global.put(s.name, offset + s.address);
                     }
                 }
-                maxAddressUsed += mod.getProgramLength();
+                offset += m.getProgramLength();
             }
-            totalSize = maxAddressUsed;
+            totalSize = offset;
         }
-
-        return new LinkerContext(baseMap, globalSymbols, totalSize);
+        return new LinkerContext(baseMap, global, totalSize);
     }
 
-    /**
-     * Valida se todos os símbolos importados por cada módulo existem na tabela global.
-     *
-     * @throws IllegalArgumentException se algum símbolo importado não for resolvido.
-     */
-    private void verifyImportedSymbols(List<ObjectFile> modules, Map<String, Integer> globalSymbols) {
-        for (ObjectFile mod : modules) {
-            for (String sym : mod.getImportedSymbols()) {
-                if (!globalSymbols.containsKey(sym)) {
-                    throw new IllegalArgumentException(
-                            "Símbolo importado [" + sym + "] não foi definido em nenhum módulo."
-                    );
-                }
+    /* ------------------------------------------------------------------------------------------ */
+    /*  PASSO 2 – Validação de imports                                                           */
+    /* ------------------------------------------------------------------------------------------ */
+
+    private void verifyImportedSymbols(List<ObjectFile> modules, Map<String, Integer> global) {
+        for (ObjectFile m : modules) {
+            for (String imp : m.getImportedSymbols()) {
+                if (!global.containsKey(imp))
+                    throw new IllegalArgumentException("Import não resolvido: " + imp);
             }
         }
     }
 
-    /**
-     * Constrói o array de bytes final e a tabela de símbolos global.
-     *
-     * <p>Aplica a realocação se finalRelocation=true, ou gera {@link RelocationRecord} com offsets ajustados.</p>
-     *
-     * @return {@link FinalCodeData} com os dados de saída do processo de linkagem.
-     */
-    private FinalCodeData buildFinalCodeAndSymbols(List<ObjectFile> modules, LinkerContext context, boolean finalRelocation) {
-        byte[] finalCode = new byte[context.totalSize];
+    /* ------------------------------------------------------------------------------------------ */
+    /*  PASSO 3 – Código final, símbolos e relocations                                           */
+    /* ------------------------------------------------------------------------------------------ */
+
+    private FinalCodeData buildFinalCodeAndSymbols(List<ObjectFile> modules,
+                                                   LinkerContext ctx,
+                                                   boolean finalRelocation) {
+        byte[] finalCode = new byte[ctx.totalSize];
         SymbolTable finalSymTab = new SymbolTable();
         List<RelocationRecord> finalRecs = new ArrayList<>();
 
         int globalOffset = 0;
-
         for (ObjectFile mod : modules) {
             byte[] code = mod.getObjectCode();
-            int base = context.baseMap.get(mod);
+            int base   = ctx.baseMap.get(mod);
 
-            // Se finalRelocation=true, corrigimos cada RelocationRecord no array do módulo
+            /* 3.1 – aplica ou registra relocations */
             if (finalRelocation) {
-                for (RelocationRecord rec : mod.getRelocationRecords()) {
-                    fixAddressInCode(code, rec, mod, base, context.globalSymbols);
+                for (RelocationRecord r : mod.getRelocationRecords()) {
+                    relocateInPlace(code, r, mod, base, ctx.globalSymbols);
                 }
             } else {
-                // Gera novos relocation records com offset somado
-                for (RelocationRecord rec : mod.getRelocationRecords()) {
-                    int newOffset = rec.offset() + globalOffset;
-                    RelocationRecord newRec = new RelocationRecord(
-                            newOffset,
-                            rec.symbol(),
-                            rec.length(),
-                            rec.pcRelative()
-                    );
-                    finalRecs.add(newRec);
+                for (RelocationRecord r : mod.getRelocationRecords()) {
+                    finalRecs.add(new RelocationRecord(
+                            r.offset() + globalOffset,
+                            r.symbol(),
+                            r.length(),
+                            r.pcRelative()
+                    ));
                 }
             }
 
-            // Copia o código deste módulo (já realocado ou não) para a posição final
+            /* 3.2 – copia bytes */
             System.arraycopy(code, 0, finalCode, globalOffset, code.length);
 
-            // Ajusta a SymbolTable final
-            //   Se finalRelocation=true => address = base + sym.address
-            //   Se false => address = globalOffset + sym.address
+            /* 3.3 – ajusta símbolos */
             for (Map.Entry<String, Symbol> e : mod.getSymbolTable().getAllSymbols().entrySet()) {
-                String symName = e.getKey();
-                Symbol sym = e.getValue();
-                int finalAddr = finalRelocation
-                        ? (base + sym.address)
-                        : (globalOffset + sym.address);
-                finalSymTab.addSymbol(symName, finalAddr, sym.isPublic);
+                String name = e.getKey();
+                Symbol s    = e.getValue();
+                int addr = finalRelocation ? base + s.address : globalOffset + s.address;
+                finalSymTab.addSymbol(name, addr, s.isPublic);
             }
-
             globalOffset += code.length;
         }
-
         return new FinalCodeData(finalCode, finalSymTab, finalRecs);
     }
 
-    /**
-     * Aplica a realocação diretamente no array de bytes do módulo.
-     *
-     * <p>Resolve o símbolo, soma seu valor ao campo indicado, e grava o valor realocado
-     * de volta no array. Se o campo for relativo ao PC, aplica o ajuste (-3 ou -4).</p>
-     *
-     * @throws IllegalArgumentException se o offset da relocação estiver fora do array.
-     */
-    private void fixAddressInCode(byte[] code, RelocationRecord rec, ObjectFile module, int moduleBase, Map<String, Integer> globalSymbols) {
-        int offset = rec.offset();
-        int length = rec.length();
-        if (offset + length > code.length) {
-            throw new IllegalArgumentException(
-                    "RelocationRecord fora do array do módulo " + module.getProgramName()
-            );
+    /** Aplica uma única relocação diretamente no buffer do módulo. */
+    private void relocateInPlace(byte[] code,
+                                 RelocationRecord rec,
+                                 ObjectFile module,
+                                 int base,
+                                 Map<String, Integer> global) {
+        int off = rec.offset(), len = rec.length();
+        if (off + len > code.length)
+            throw new IllegalArgumentException("Relocation fora do buffer do módulo " + module.getProgramName());
+
+        int original = 0;
+        for (int i = 0; i < len; i++) original = (original << 8) | (code[off + i] & 0xFF);
+
+        Integer symAddr = global.get(rec.symbol());
+        if (symAddr == null) {
+            Integer local = module.getSymbolTable().getSymbolAddress(rec.symbol());
+            if (local == null) throw new IllegalStateException("Símbolo indefinido: " + rec.symbol());
+            symAddr = base + local;
         }
 
-        // Lê valor atual no array
-        int oldVal = 0;
-        for (int i = 0; i < length; i++) {
-            oldVal = (oldVal << 8) | (code[offset + i] & 0xFF);
-        }
-
-        // Descobre o endereço do símbolo
-        Integer resolved = globalSymbols.get(rec.symbol());
-        if (resolved == null) {
-            // Tenta ver se é símbolo local do próprio módulo
-            Integer localAddr = module.getSymbolTable().getSymbolAddress(rec.symbol());
-            if (localAddr == null) {
-                throw new IllegalStateException("Símbolo não encontrado: " + rec.symbol());
-            }
-            resolved = moduleBase + localAddr;
-        }
-
-        // Soma
-        int newVal = oldVal + resolved;
-        // Se pcRelative, subtrai 3 (Formato 3)
-        if (rec.pcRelative()) {
-            newVal -= 3;
-        }
-
-        // Escreve o valor de volta
-        for (int i = length - 1; i >= 0; i--) {
-            code[offset + i] = (byte) (newVal & 0xFF);
-            newVal >>>= 8;
+        int value = original + symAddr - (rec.pcRelative() ? (len == 3 ? 3 : 4) : 0);
+        for (int i = len - 1; i >= 0; i--) {
+            code[off + i] = (byte) (value & 0xFF);
+            value >>>= 8;
         }
     }
 
-    /**
-     * Combina as linhas de código-fonte de todos os módulos em uma única lista.
-     *
-     * <p>Este métodO é opcional e utilizado principalmente para fins de depuração,
-     * permitindo rastrear a origem do código montado a partir dos diferentes módulos.</p>
-     *
-     * <p>Para cada módulo com código-fonte original disponível ({@code getRawSourceCode() != null}),
-     * suas linhas são adicionadas à lista, seguidas por um comentário delimitador com o nome do programa.</p>
-     *
-     * @param modules Lista de módulos {@link ObjectFile} contendo os códigos-fonte originais.
-     * @return Lista combinada de todas as linhas de código-fonte, separadas por marcações de fim de módulo.
-     */
+    /* ------------------------------------------------------------------------------------------ */
+    /*  PASSO 4 – Fonte combinado (debug)                                                        */
+    /* ------------------------------------------------------------------------------------------ */
+
     private List<String> combineModuleSources(List<ObjectFile> modules) {
         List<String> combined = new ArrayList<>();
-        for (ObjectFile mod : modules) {
-            if (mod.getRawSourceCode() != null) {
-                combined.addAll(mod.getRawSourceCode());
-            }
-            combined.add(";---- Fim do Módulo " + mod.getProgramName() + " ----");
+        for (ObjectFile m : modules) {
+            if (m.getRawSourceCode() != null) combined.addAll(m.getRawSourceCode());
+            combined.add(";---- Fim de " + m.getProgramName() + " ----");
         }
         return combined;
     }
 
-    /**
-     * Gera o conteúdo textual do arquivo .obj no formato H/D/T/M/E e grava no disco.
-     *
-     * @param finalObj Objeto final {@link ObjectFile} contendo os dados a serem salvos.
-     * @param outputFileName Nome base do arquivo (sem extensão).
-     * @param finalRelocation Indica se relocations devem ser incluídos.
-     * @throws IOException Em caso de falha ao escrever no disco.
-     */
-    private void writeLinkedObjectFile(ObjectFile finalObj, String outputFileName, boolean finalRelocation) throws IOException {
-        int startAddress = finalObj.getStartAddress();
-        byte[] code = finalObj.getObjectCode();
-        int progLen = code.length;
-        String progName = finalObj.getProgramName();
-        SymbolTable finalSym = finalObj.getSymbolTable();
+    /* ------------------------------------------------------------------------------------------ */
+    /*  PASSO 5 – Escrita do .obj textual                                                        */
+    /* ------------------------------------------------------------------------------------------ */
 
-        StringBuilder content = new StringBuilder();
-        // H record (Header)
-        content.append(
-                String.format("H^%-6s^%06X^%06X\n", fitProgramName(progName), startAddress, progLen)
-        );
+    private void writeLinkedObjectFile(ObjectFile obj,
+                                       String baseName,
+                                       boolean includeMRecords) throws IOException {
+        int start = obj.getStartAddress();
+        byte[] code = obj.getObjectCode();
+        SymbolTable symTab = obj.getSymbolTable();
 
-        // D record (Define) - símbolos exportados
-        List<Symbol> exported = new ArrayList<>();
-        for (Symbol s : finalSym.getAllSymbols().values()) {
-            if (s.isPublic) {
-                exported.add(s);
-            }
-        }
-        if (!exported.isEmpty()) {
-            StringBuilder dRec = new StringBuilder("D");
-            for (Symbol es : exported) {
-                dRec.append("^")
-                        .append(es.name)
-                        .append("^")
-                        .append(String.format("%06X", es.address));
-            }
-            content.append(dRec).append("\n");
+        StringBuilder sb = new StringBuilder();
+
+        /* H */
+        sb.append(String.format("H^%-6s^%06X^%06X%n",
+                fitName(obj.getProgramName()), start, code.length));
+
+        /* D */
+        for (Symbol s : symTab.getAllSymbols().values()) {
+            if (s.isPublic) sb.append(String.format("D^%s^%06X%n", s.name, s.address));
         }
 
-        // T records (Text)
-        List<TBlock> tblocks = buildTextRecords(startAddress, code);
-        for (TBlock b : tblocks) {
+        /* T */
+        for (TBlock b : buildTextRecords(start, code)) {
             StringBuilder hex = new StringBuilder();
-            for (byte bb : b.data) {
-                hex.append(String.format("%02X", bb & 0xFF));
-            }
-            int sizeBlock = b.data.size();
-            content.append(
-                    String.format("T^%06X^%02X^%s\n", b.startAddress, sizeBlock, hex)
-            );
+            for (byte v : b.data) hex.append(String.format("%02X", v & 0xFF));
+            sb.append(String.format("T^%06X^%02X^%s%n", b.startAddress, b.data.size(), hex));
         }
 
-        // M records (Modification) - só se finalRelocation=false
-        if (!finalRelocation) {
-            for (RelocationRecord rec : finalObj.getRelocationRecords()) {
-                int address = startAddress + rec.offset();
-                int halfBytes = rec.length() * 2;
-                // +SÍMBOLO
-                String mLine = String.format(
-                        "M^%06X^%02X^+%s", address, halfBytes, rec.symbol()
-                );
-                content.append(mLine).append("\n");
+        /* M */
+        if (includeMRecords) {
+            for (RelocationRecord r : obj.getRelocationRecords()) {
+                int addr = start + r.offset();
+                sb.append(String.format("M^%06X^%02X^+%s%n", addr, r.length() * 2, r.symbol()));
             }
         }
 
-        // E record (End)
-        content.append(String.format("E^%06X\n", startAddress));
+        /* E */
+        sb.append(String.format("E^%06X%n", start));
 
-        // Grava no disco
-        FileUtils.writeFileInDir(Constants.SAVE_DIR, outputFileName, content.toString());
+        FileUtils.writeFileInDir(Constants.SAVE_DIR, baseName + ".obj", sb.toString());
     }
 
-    /**
-     * Garante que o nome do programa tenha no máximo 6 caracteres.
-     *
-     * <p>Este métodO é usado para gerar o cabeçalho do arquivo objeto (registro H),
-     * onde o nome do programa é limitado a 6 posições.</p>
-     *
-     * <p>Se o nome for {@code null}, retorna o identificador "NONAME".
-     * Caso contrário, <b>trunca o nome para 6 caracteres</b> ou o mantém como está.</p>
-     *
-     * @param name Nome original do programa.
-     * @return Nome ajustado com no máximo 6 caracteres.
-     */
-    private String fitProgramName(String name) {
-        if (name == null) return "NONAME";
-        return (name.length() > 6) ? name.substring(0, 6) : name;
-    }
+    /* ------------------------------------------------------------------------------------------ */
+    /*  HELPERs                                                                                   */
+    /* ------------------------------------------------------------------------------------------ */
 
-    /**
-     * Constrói os registros de texto (T) para o arquivo objeto.
-     *
-     * <p>Divide o array de bytes em blocos de até 30 bytes cada, como especificado pelo
-     * formato dos registros de texto no SIC/XE.</p>
-     *
-     * <p>Cada bloco resultante é armazenado em um {@link TBlock}, contendo o endereço inicial
-     * e a sequência de bytes correspondente.</p>
-     *
-     * @param start Endereço base onde o código será carregado.
-     * @param code Array de bytes do código final.
-     * @return Lista de blocos T prontos para serem gravados no .obj.
-     */
     private List<TBlock> buildTextRecords(int start, byte[] code) {
-        List<TBlock> blocks = new ArrayList<>();
-        final int MAX_BYTES = 30;
-        int idx = 0;
-        while (idx < code.length) {
-            int len = Math.min(MAX_BYTES, code.length - idx);
-            TBlock tb = new TBlock(start + idx);
-            for (int i = 0; i < len; i++) {
-                tb.data.add(code[idx + i]);
-            }
-            blocks.add(tb);
-            idx += len;
+        List<TBlock> list = new ArrayList<>();
+        final int MAX = 30;
+        for (int i = 0; i < code.length; i += MAX) {
+            int len = Math.min(MAX, code.length - i);
+            TBlock b = new TBlock(start + i);
+            for (int j = 0; j < len; j++) b.data.add(code[i + j]);
+            list.add(b);
         }
-        return blocks;
+        return list;
     }
 
-    /**
-     * Armazena o contexto intermediário da linkedição.
-     *
-     * <p>Contém informações como:</p>
-     * <ul>
-     *   <li>Mapa de endereços base para cada módulo</li>
-     *   <li>Tabela global de símbolos exportados</li>
-     *   <li>Tamanho total acumulado do código</li>
-     * </ul>
-     */
-    private static class LinkerContext {
-        Map<ObjectFile, Integer> baseMap;
-        Map<String, Integer> globalSymbols;
-        int totalSize;
-
-        LinkerContext(Map<ObjectFile, Integer> baseMap, Map<String, Integer> globalSymbols, int totalSize) {
-            this.baseMap = baseMap;
-            this.globalSymbols = globalSymbols;
-            this.totalSize = totalSize;
-        }
+    private String fitName(String n) {
+        if (n == null || n.isBlank()) return "NONAME";
+        return n.length() > 6 ? n.substring(0, 6) : n;
     }
 
-    /**
-     * Estrutura de saída do processo de linkagem.
-     *
-     * <p>Contém o código final montado, a tabela de símbolos consolidada e
-     * os registros de relocação (se finalRelocation=false).</p>
-     */
-    private static class FinalCodeData {
-        byte[] code;
-        SymbolTable symbolTable;
-        List<RelocationRecord> relocationRecords;
+    /* ------------------------------------------------------------------------------------------ */
+    /*  DATA CLASSES                                                                              */
+    /* ------------------------------------------------------------------------------------------ */
 
-        FinalCodeData(byte[] code, SymbolTable symbolTable, List<RelocationRecord> relocationRecords) {
-            this.code = code;
-            this.symbolTable = symbolTable;
-            this.relocationRecords = relocationRecords;
-        }
-    }
+    /** Contexto intermediário do linker (bases, símbolos globais e tamanho total). */
+    public record LinkerContext(Map<ObjectFile, Integer> baseMap,
+                                 Map<String, Integer> globalSymbols,
+                                 int totalSize) {}
 
-    /**
-     * Representa um bloco de texto (registro T) do arquivo objeto SIC/XE.
-     *
-     * <p>Armazena o endereço inicial do bloco e os dados em formato de lista de bytes.
-     * Cada bloco corresponde a no máximo 30 bytes, conforme especificação do montador.</p>
-     */
+    /** Resultado da linkedição: código final, tabela de símbolos e relocations. */
+    public record FinalCodeData(byte[] code,
+                                 SymbolTable symbolTable,
+                                 List<RelocationRecord> relocationRecords) {}
+
+    /** Bloco de até 30 bytes para gerar um registro T. */
     public static class TBlock {
-        int startAddress;
-        List<Byte> data = new ArrayList<>();
-
-        public TBlock(int start) {
-            this.startAddress = start;
-        }
+        /** Endereço do primeiro byte do bloco. */
+        public final int startAddress;
+        /** Bytes que compõem o bloco. */
+        public final List<Byte> data = new ArrayList<>();
+        public TBlock(int startAddress) { this.startAddress = startAddress; }
     }
 }
